--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -19,6 +19,7 @@ body {
 .about {
     padding: 4rem 2rem;
     color: #000000;
+    margin-bottom: 25px;
 }
 
 .about h1 {
@@ -101,7 +102,7 @@ footer{
     display: flex;
     justify-content: center;
     background-color: #ffffff;
-    padding-bottom: 30px;
-    padding-top: 25px;
+    padding-bottom: 50px;
+    padding-top: 40px;
     
 }
